# CMakeExamples

./: SomeNotes.md  variables.cmake
simple/: CMakeLists.txt  lib.cpp  lib.h  simple.cpp  simple.h.in
